Fixed overflow happening on order page on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,10 @@ body {
   color: white;
 }
 
+html,body{
+  overflow-x: hidden;
+}
+
 section {
   position: relative;
   display: flex;
